scripts/firewall/rules_firewall_v6
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-N sshguard
-A INPUT -j sshguard
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# permit tcp ports 25,80,443,587,993,22345 from everywhere
# permit udp/tcp ports 53 from everywhere
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22345 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT

# RFC 4193 
-A INPUT -s fd00::/8 -j ACCEPT

# permit everything from mrt and leia
-A INPUT -s 2001:6a8:2880:a021::6/64 -j ACCEPT
-A INPUT -s 2001:6a8:2880:a021::1/64 -j ACCEPT

# permit icmp echo-reply from everywhere
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

-A OUTPUT -j ACCEPT
COMMIT
